base/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra-deployment
  # labels:
  #   component: hydra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demandcluster
      # component: hydra
      release: edge
  template:
    spec:
      containers:
      - name: hydra
        image: oryd/hydra
        ports:
        - containerPort: 4444
        - containerPort: 4445
        - containerPort: 5555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  # labels:
  #   component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demandcluster
      # component: api
      release: edge
  template:
    spec:
      containers:
      - name: reaction
        image: reactioncommerce/reaction
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  # labels:
  #   component: identity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demandcluster
      # component: identity
      release: edge
  template:
    spec:
      containers:
      - name: reaction-identity
        image: reactioncommerce/identity
        ports:
        - containerPort: 4100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  # labels:
  #   component: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demandcluster
      # component: admin
      release: edge
  template:
    spec:
      containers:
      - name: reaction-admin
        image: reactioncommerce/reaction-admin
        ports:
        - containerPort: 4080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-deployment
  # labels:
  #   component: storefront
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demandcluster
      # component: storefront
      release: edge
  template:
    spec:
      containers:
      - name: example-storefront
        image: reactioncommerce/example-storefront
        ports:
        - containerPort: 4000
