base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-service
  labels:
    component: hydra
spec:
  selector:
    app: demandcluster
    component: hydra
    release: edge
  ports:
  - port: 4444
    name: public
  - port: 4445
    name: admin
  - port: 5555
    name: tokens
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    component: api
spec:
  selector:
    app: demandcluster
    component: api
    release: edge
  ports:
  - port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  labels:
    component: identity
spec:
  selector:
    app: demandcluster
    component: identity
    release: edge
  ports:
  - port: 4100
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  labels:
    component: admin
spec:
  selector:
    app: demandcluster
    component: admin
    release: edge
  ports:
  - port: 4080
---
apiVersion: v1
kind: Service
metadata:
  name: storefront-service
  labels:
    component: storefront
spec:
  selector:
    app: demandcluster
    component: storefront
    release: edge
  ports:
  - port: 4000
